# skim

./: .gitignore  AGENTS.md  DOLT_REMOTE.md  README.md  companion.sh  dev.sh  index.html  makbkifpoi1brjbtchu6jbgjesc13jmf  manifest  obde6gpg8igdvbarho4ul6qviimktonl.darc  package.json  pnpm-lock.yaml  release.sh  tnbu0avaq5surdhmanr6jllvbmdirb8i  vqjfhgmhd2t3sppsdhsk4olhuh5jtuso.darc
.beads/: issues.jsonl  metadata.json
.claude/: settings.local.json
docs/: SPEC.md  carousel.js  index.html  privacy.html  styles.css  terms.html
ios/: README.md  project.yml
ios/Skim/: Package.swift
ios/Skim/Sources/: SkimApp.swift
ios/Skim/Sources/Models/: Models.swift
ios/Skim/Sources/Services/: AIService.swift  ClaudeOAuth.swift  FeedService.swift  FoundationModelRunner.swift  FoundationModelSchemas.swift  KeychainStore.swift  MLXModelManager.swift  MLXRunner.swift  ModelRouter.swift
ios/Skim/Sources/ViewModels/: AppState.swift
ios/Skim/Sources/Views/: AddFeedView.swift  ArticleDetailView.swift  ArticleListView.swift  ContentView.swift  MLXModelsView.swift  SettingsView.swift  SidebarView.swift  SignInWithClaudeView.swift
native/SkimCore/: Package.swift
native/SkimCore/Sources/SkimCore/: AggregatorService.swift  FeedRefreshService.swift  Models.swift  SkimStore.swift  (+3 more)
native/SkimNative/: project.yml
native/SkimNative/SkimIOS/: Info.plist
native/SkimNative/SkimIOSTests/: ArticleExtractorTests.swift  NativeAIDegenerateRepetitionTests.swift
native/SkimNative/SkimNative.xcodeproj/: project.pbxproj
plugins/tauri-plugin-skim-ai/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-skim-ai/ios/: Package.swift  README.md
plugins/tauri-plugin-skim-ai/permissions/: default.toml
plugins/tauri-plugin-skim-ai/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
scripts/: testflight.env.example  tf-pr.sh  upload-testflight.sh
src/: App.tsx  globals.css  main.tsx
src-tauri/: .gitignore  BUILD_AGENT.md  Cargo.toml  Entitlements.plist  Info.plist  build_agent.sh  claude_watch.sh  tauri.conf.json  test_loop.sh
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/ai/: claude_oauth.rs  local_provider.rs  local_provider_ios.rs  mod.rs  model_manager.rs  prompts.rs  provider.rs
src-tauri/src/commands/: ai.rs  articles.rs  chat.rs  claude_oauth.rs  editions.rs  feeds.rs  mod.rs  models.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs  story_clustering.rs  today_edition.rs
src-tauri/src/feed/: feedly.rs  feedly_oauth.rs  fetcher.rs  mod.rs
src/components/article/: ArticleCard.tsx  ArticleContextMenu.tsx
src/components/chat/: AskSkimDialog.tsx  CatchupDialog.tsx  ChatPanel.tsx
src/components/common/: AIBootDisclaimer.tsx  AIDisclaimer.tsx
src/components/feed/: AddFeedDialog.tsx
src/components/layout/: ArticleDetail.tsx  ArticleList.tsx  FeedsSection.tsx  Sidebar.tsx
src/components/settings/: ModelBrowser.tsx  SettingsDialog.tsx
src/components/ui/: NumberInput.tsx
src/hooks/: useAi.ts  useArticles.ts  useFeeds.ts  useFolders.ts  useInbox.ts  useLearning.ts  useLockBodyScroll.ts  useModels.ts  usePullToRefresh.tsx  useRecent.ts  useSettings.ts  useSwipeToDismiss.ts  useThemes.ts  useVisualViewport.ts
src/lib/: smartFolder.ts
src/services/: commands.ts  types.ts
src/stores/: uiStore.ts
src/utils/: platform.ts
(+47 files in other folders)
