[package]
name = "skim"
version = "0.1.0"
description = "RSS reader for the age of AI"
authors = ["Skim"]
edition = "2021"

[lib]
name = "skim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
dead_code = "deny"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-skim-ai = { path = "../plugins/tauri-plugin-skim-ai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
feed-rs = "2"
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
html2text = "0.12"
url = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
async-trait = "0.1"
futures-util = "0.3"
urlencoding = "2"
opml = "1"
regex = "1"
encoding_rs = "0.8"
sysinfo = "0.38"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
dom_smoothie = "0.17"

# llama.cpp — desktop only. Not cross-compilable to iOS.
[target.'cfg(not(target_os = "ios"))'.dependencies]
llama-cpp-2 = { version = "0.1.143", features = ["metal", "sampler"] }


[profile.dev]
codegen-units = 16
incremental = true
